test/types/unions/accessByIndex-bad2.good
accessByIndex-bad2.chpl:7: error: invalid index passed to union field access
