test/types/unions/accessByIndex-bad2.chpl
union U {
  var x: int;
  var y: string;
}

var u: U;
u(2) = 10;
